# familiars-graphics-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: shader.h
include/glad/: glad.h
src/: glad.c  main  main.c  main.cpp  shader.c
src/shaders/: shader.fs  shader.vs
